# WebAPi_Cadastro

./: docker-compose.yml  entrypoint.sh
API/: WebAPI_Cadastro.sln
API/WebAPI_Cadastro/: Dockerfile  Program.cs  Startup.cs  WebAPI_Cadastro.csproj  appsettings.Development.json
API/WebAPI_Cadastro/Contexts/: IntelitraderContext.cs
API/WebAPI_Cadastro/Controllers/: UsuariosController.cs
API/WebAPI_Cadastro/Interfaces/: IUsuarioRepository.cs
API/WebAPI_Cadastro/Models/: Usuario.cs
API/WebAPI_Cadastro/Properties/: launchSettings.json
API/WebAPI_Cadastro/Repositories/: UsuarioRepository.cs
API/WebAPI_Cadastro/ViewModels/: UsuariosViewModel.cs
API/WebApi_Cadastro.Test/: WebApi_Cadastro.Test.csproj
API/WebApi_Cadastro.Test/Controllers/: UsuariosControllerTest.cs
BD/: DDL.sql
Bolsa/Intelitrader/: CMakeLists.txt  Intelitrader.cpp  Intelitrader.h
