# CMakeList.txt: projeto de CMake para Intelitrader, incluir origem e definir
# lógica específica a um projeto aqui.
#
cmake_minimum_required (VERSION 3.8)

project ("Intelitrader")

# Adicione a origem ao executável deste projeto.
add_executable (Intelitrader "Intelitrader.cpp" "Intelitrader.h")

# TODO: Adicione testes e instale destinos, se necessário.
